# cogs189-final

./: README.md  pyproject.toml
experiment/: main.py  mindwave.py  recording.py
modeling/: data.py  eeg_model.py  main.py  trans_model.py  viz.ipynb
modeling/data/subject-1/: attention.csv  stimuli.csv  waves.csv
modeling/data/subject-2/: attention.csv  stimuli.csv  waves.csv
modeling/data/subject-3/: attention.csv  stimuli.csv  waves.csv
modeling/data/subject-4/: attention.csv  stimuli.csv  waves.csv
modeling/data/subject-5/: attention.csv  stimuli.csv  waves.csv
modeling/data/subject-6/: attention.csv  stimuli.csv  waves.csv
modeling/data/subject-7/: attention.csv  stimuli.csv  waves.csv
